--- a/event/gctc-expo-2017/speakers/index.html
+++ b/event/gctc-expo-2017/speakers/index.html
@@ -357,7 +357,7 @@
 <div class="inlineBlock"><div class="pic"></div><img alt="Zhigang Zhu" src="/GCTC/uploads/2017/07/11/ZhigangZhu.jpg"><h3>Zhigang Zhu</h3><p>Professor, The CUNY City College</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Jie Gong" src="/GCTC/uploads/2017/07/11/JieGong.jpg"><h3>Jie Gong</h3><p>Assistant Professor, Rutgers University</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Cecilia Feeley" src="/GCTC/uploads/2017/07/11/CeciliaFeeley.jpg"><h3>Cecilia Feeley</h3><p>Autism Transportation Manager, Rutgers University</p> </div>
-<div class="inlineBlock"><div class="pic"></div><img alt="Jason Simmons" src="/GCTC/uploads/2017/07/11/JasonSimmons.jpg"><h3>Jason Simmons</h3><p>Principal Planner, NJ Passaic County Department of Planning & Economic Development</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Jason Simmons" src="/GCTC/uploads/2017/07/11/JasonSimmons.jpg"><h3>Jason Simmons</h3><p>Principal Planner, NJ Passaic County Department of Planning &amp; Economic Development</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Zheng Yi Wu" src="/GCTC/uploads/2017/07/11/ZhengYiWu.jpg"><h3>Zheng Yi Wu</h3><p>Bentley Fellow, Bentley</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Stephanie Dock" src="/GCTC/uploads/2017/07/11/StephanieDock.jpg"><h3>Stephanie Dock</h3><p>Research Program Administrator, District Department of Transportation</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Masugi Inoue" src="/GCTC/uploads/2017/07/11/MasugiInoue.jpg"><h3>Masugi Inoue</h3><p>Director, International Research Advancement Office, NICT (Japan)</p> </div>
@@ -368,17 +368,17 @@
 <div class="inlineBlock"><div class="pic"></div><img alt="Jude Willcher" src="/GCTC/uploads/2017/07/11/JudeWillcher.jpg"><h3>Jude Willcher</h3><p>Strategic Advisor, Seattle Department of Transportation</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Hiroaki Nishi" src="/GCTC/uploads/2017/07/11/HiroakiNishi.jpg"><h3>Hiroaki Nishi</h3><p>Professor / Chairperson, Keio University / Misono Town Management Association, Inc.</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Matthew N. Portis" src="/GCTC/uploads/2017/07/11/MatthewN.PortisSolGreenSolutionsCorp.jpg"><h3>Matthew N. Portis</h3><p>Founder, CEO, SolGreen® Solutions Corp.</p> </div>
-<div class="inlineBlock"><div class="pic"></div><img alt="Dean Skidmore" src="/GCTC/uploads/2017/07/11/Skidmore.jpg"><h3>Dean Skidmore</h3><p>Principal Consultant, Public Safety, IoT+LTE Consluting Group</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Dean Skidmore" src="/GCTC/uploads/2017/07/11/Skidmore.jpg"><h3>Dean Skidmore</h3><p>Principal Consultant, Public Safety, IoT+LTE Consulting Group</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Don DuRousseau" src="/GCTC/uploads/2017/07/11/DonDuRousseau.jpg"><h3>Don DuRousseau</h3><p>Director, Research Technology, George Washington University</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Greg Toth" src="/GCTC/uploads/2017/07/11/Greg_Toth.jpg"><h3>Greg Toth</h3><p>Director, IoT Dev Labs</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Jaroslav "Jarda" Flidr" src="/GCTC/uploads/2017/07/11/JaroslavJardaFlidr.jpg"><h3>Jaroslav "Jarda" Flidr</h3><p>Chief Architect for Cloud Computing, George Washington University</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Scott J. White" src="/GCTC/uploads/2017/07/11/DrScottJWhite.jpg"><h3>Scott J. White</h3><p>Director, Cyber Academy, George Washington University</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Kris Bailey" src="/GCTC/uploads/2017/07/11/KrisBaileyElectricCabNorthAmerica.jpg"><h3>Kris Bailey</h3><p>COO, Electric Cab North America</p> </div>
-<div class="inlineBlock"><div class="pic"></div><img alt="Brian Pugliese" src="/GCTC/uploads/2017/07/11/BrianPugliese.jpg"><h3>Brian Pugliese</h3><p>Smart Water Infrastructure & Technology Project Manager, City of Bellevue</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Brian Pugliese" src="/GCTC/uploads/2017/07/11/BrianPugliese.jpg"><h3>Brian Pugliese</h3><p>Smart Water Infrastructure &amp; Technology Project Manager, City of Bellevue</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Raja Kadiyala" src="/GCTC/uploads/2017/07/11/RajaKadiyala.jpg"><h3>Raja Kadiyala</h3><p>Global Practice Director for Intelligent Systems, CH2M</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Young Chun" src="/GCTC/uploads/2017/07/11/Photo_YoungChun_BusanSmartCity.jpg"><h3>Young Chun</h3><p>Senior Consultant, Busan Metropolitan City (South Korea), SKT, Deli-I</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Jason Iken" src="/GCTC/uploads/2017/07/11/JasonIken.jpg"><h3>Jason Iken</h3><p>Senior Assistant Director, City of Houston Wastewater Operations</p> </div>
-<div class="inlineBlock"><div class="pic"></div><img alt="Mark Serres" src="/GCTC/uploads/2017/07/11/MarkSerres.jpg"><h3>Mark Serres</h3><p>Chief Technology Officer (CTO), Utility Systems Science & Software</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Mark Serres" src="/GCTC/uploads/2017/07/11/MarkSerres.jpg"><h3>Mark Serres</h3><p>Chief Technology Officer (CTO), Utility Systems Science &amp; Software</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Joanna Wadsworth" src="/GCTC/uploads/2017/07/11/JoannaWadsworth_CityofLasVegas.jpg"><h3>Joanna Wadsworth</h3><p>Program Manager, City of Las Vegas</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Steve Crumb" src="/GCTC/uploads/2017/07/11/SteveCrumb_GENIVIAlliance.jpg"><h3>Steve Crumb</h3><p>Executive Director, GENIVI Alliance</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Kimberly Calhoun" src="/GCTC/uploads/2017/07/11/KimberlyCalhounheadshot.jpg"><h3>Kimberly Calhoun</h3><p>Founder/CEO, Conover NC; CAP Science Labs</p> </div>
@@ -388,7 +388,7 @@
 <div class="inlineBlock"><div class="pic"></div><img alt="Elkin Hernandez" src="/GCTC/uploads/2017/07/11/ElkinHernandez.jpg"><h3>Elkin Hernandez</h3><p>Manager of Process Control, DC Water</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Sheng-Feng Hung" src="/GCTC/uploads/2017/07/11/Sheng-FengHung.jpg"><h3>Sheng-Feng Hung</h3><p>Head, Transportation Bureau, Kaohsiung City Government, Taiwan</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Poh Shi (Saimon) Ko" src="/GCTC/uploads/2017/07/11/PohShiSaimonKo.jpg"><h3>Poh Shi (Saimon) Ko</h3><p>Sub Division Chief, Department of Information Technology, Taipei City Government, Taiwan</p> </div>
-<div class="inlineBlock"><div class="pic"></div><img alt="Jason Whittet" src="/GCTC/uploads/2017/07/11/JasonWhittet_Headshot.jpg"><h3>Jason Whittet</h3><p>Business Development Manager, AT&T</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Jason Whittet" src="/GCTC/uploads/2017/07/11/JasonWhittet_Headshot.jpg"><h3>Jason Whittet</h3><p>Business Development Manager, AT&amp;T</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Dennis Linders" src="/GCTC/uploads/2017/07/11/dennislinders.jpg"><h3>Dennis Linders</h3><p>Data and Performance Analyst (Service Delivery and Innovation), Office of the Montgomery County Executive (MD)</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Michael Ohlsen" src="/GCTC/uploads/2017/07/11/MichaelOhlsen.jpg"><h3>Michael Ohlsen</h3><p>Energy Manager, City of Tallahassee</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Ayberk Kocatepe" src="/GCTC/uploads/2017/07/11/AyberkKocatepe.jpg"><h3>Ayberk Kocatepe</h3><p>Graduate Assistant, Florida State University</p> </div>
@@ -397,7 +397,7 @@
 <div class="inlineBlock"><div class="pic"></div><img alt="Jill Sorensen" src="/GCTC/uploads/2017/07/11/JillSorensen.jpg"><h3>Jill Sorensen</h3><p>Director, BEVI, Baltimore City, BGE, West Baltimore</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Fred Payne" src="/GCTC/uploads/2017/07/11/FredPayne.jpg"><h3>Fred Payne</h3><p>Municipal official, Greenville, DC</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="R Subramanian" src="/GCTC/uploads/2017/07/11/RSubramanianRAMPsusethis.jpg"><h3>R Subramanian</h3><p>Research Scientist, Carnegie Mellon University</p> </div>
-<div class="inlineBlock"><div class="pic"></div><img alt="Wang, Wen-Cheng" src="/GCTC/uploads/2017/07/11/WangWen-Cheng.jpg"><h3>Wang, Wen-Cheng</h3><p>Chief PKI & IAM Product Manager, Data Communications Business Group, Chunghwa Telecom Co., Ltd.</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Wang, Wen-Cheng" src="/GCTC/uploads/2017/07/11/WangWen-Cheng.jpg"><h3>Wang, Wen-Cheng</h3><p>Chief PKI &amp; IAM Product Manager, Data Communications Business Group, Chunghwa Telecom Co., Ltd.</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Su, Tzu Han" src="/GCTC/uploads/2017/07/11/SuTzuHan.jpg"><h3>Su, Tzu Han</h3><p>Officer, Departmemt of Water Resources, Taoyuan City</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Dominique Davison" src="/GCTC/uploads/2017/07/11/DominiquePortrait.jpg"><h3>Dominique Davison</h3><p>Founder and CEO, PlanIT Impact</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Alex Huppenthal" src="/GCTC/uploads/2017/07/11/alex-huppenthal.jpg"><h3>Alex Huppenthal</h3><p>CEO/Founder, Aspenworks</p> </div>
@@ -414,7 +414,7 @@
 <div class="inlineBlock"><div class="pic"></div><img alt="David Matthews" src="/GCTC/uploads/2017/07/11/DavidMatthews.jpg"><h3>David Matthews</h3><p>Director of Engineering, Uturn Data Solutions</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Yan Wan" src="/GCTC/uploads/2017/07/11/YanWan.jpg"><h3>Yan Wan</h3><p>Professor, University of Texas at Arlington</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Shengli Fu" src="/GCTC/uploads/2017/07/11/ShengliFu.jpg"><h3>Shengli Fu</h3><p>Professor, University or North Texas</p> </div>
-<div class="inlineBlock"><div class="pic"></div><img alt="Levent Gürgen" src="/GCTC/uploads/2017/07/11/LeventGurgen.jpg"><h3>Levent Gürgen</h3><p>R&D Project Manager, CEA - French Commission for Atomic and Alternative Energies</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Levent Gürgen" src="/GCTC/uploads/2017/07/11/LeventGurgen.jpg"><h3>Levent Gürgen</h3><p>R&amp;D Project Manager, CEA - French Commission for Atomic and Alternative Energies</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Cory Hohs" src="/GCTC/uploads/2017/07/11/CoryHohs.jpg"><h3>Cory Hohs</h3><p>CEO and Founder, HAAS Alert</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Ron Tennant" src="/GCTC/uploads/2017/07/11/ChiefRonTennant.jpg"><h3>Ron Tennant</h3><p>Acting Deputy Chief, Grand Rapids, Michigan Fire Department</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Dryver Huston" src="/GCTC/uploads/2017/07/11/hustondryver.jpg"><h3>Dryver Huston</h3><p>Professor, University of Vermont</p> </div>
@@ -422,7 +422,7 @@
 <div class="inlineBlock"><div class="pic"></div><img alt="Vijay Sammeta" src="/GCTC/uploads/2017/07/11/VijaySammeta.jpg"><h3>Vijay Sammeta</h3><p>CEO, Civic Foundry, Ross Valley Fire Department</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Cody A. Dietrich" src="/GCTC/uploads/2017/07/11/CodyDietrichITA.jpg"><h3>Cody A. Dietrich</h3><p>U.S. Commercial Officer, Virginia and Washington D.C., U.S. Department of Commerce</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Daniel Hung, Tung-Lin" src="/GCTC/uploads/2017/07/11/DanielHungTungLin.jpg"><h3>Daniel Hung, Tung-Lin</h3><p>Senior Executive Officer, Penghu County Government, Taiwan</p> </div>
-<div class="inlineBlock"><div class="pic"></div><img alt="Alessandro RIccardi" src="/GCTC/uploads/2017/07/11/AlessandroRiccardi.jpg"><h3>Alessandro Riccardi</h3><p>Technical Specialist & Delivery Manager, Municipality of Genoa / MAPS S.p.A.</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Alessandro RIccardi" src="/GCTC/uploads/2017/07/11/AlessandroRiccardi.jpg"><h3>Alessandro Riccardi</h3><p>Technical Specialist &amp; Delivery Manager, Municipality of Genoa / MAPS S.p.A.</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Taewoo Lee" src="/GCTC/uploads/2017/07/11/TaewooLee.jpg"><h3>Taewoo Lee</h3><p>Assistant Researcher, Korea Automotive Technology Institute</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Anil Sharma" src="/GCTC/uploads/2017/07/11/AnilSharma.jpg"><h3>Anil Sharma</h3><p>Chief Network Officer, Washington, DC</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Colleen Herndon" src="/GCTC/uploads/2017/07/11/colleenherndon.jpg"><h3>Colleen Herndon</h3><p>Project Manager, Nashville Metro ITS</p> </div>
@@ -452,6 +452,22 @@
 <div class="inlineBlock"><div class="pic"></div><img alt="Sukru Yaren Gelbal" src="/GCTC/uploads/2017/07/11/sukruyarengelbal.jpg"><h3>Sukru Yaren Gelbal</h3><p>Graduate Research Assistant, The Ohio State University Center for Automotive Research</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Mohammad "Mo" Shakouri" src="/GCTC/uploads/2017/07/11/MohammadMoShakouri.jpg"><h3>Mohammad "Mo" Shakouri</h3><p>Director, Joint Venture Silicon Valley</p> </div>
 <div class="inlineBlock"><div class="pic"></div><img alt="Ulysses Vinson" src="/GCTC/uploads/2017/07/11/UlyssesVinson.jpg"><h3>Ulysses Vinson</h3><p>Smart Communities Officer, San Mateo County, CA</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Mike Wengrovitz" src="/GCTC/uploads/2017/07/11/MikeWengrovitz.jpg"><h3>Mike Wengrovitz</h3><p>Vice President, Innovation, Mutualink Inc.</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Mohan Tammisetti" src="/GCTC/uploads/2017/07/11/MohanTammisetti.jpg"><h3>Mohan Tammisetti</h3><p>CTO, Virtual Network Communications</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Darrell Washington" src="/GCTC/uploads/2017/07/11/DarrellWashington.jpg"><h3>Darrell Washington</h3><p>Manager, Communications, City of Denton</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Chris Crosby" src="/GCTC/uploads/2017/07/11/ChrisCrosby-4.jpg"><h3>Chris Crosby</h3><p>CEO, Xaqt</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Rashmi Patel" src="/GCTC/uploads/2017/07/11/Rashmi_Patel.jpg"><h3>Rashmi Patel</h3><p>ARIBO Software Lead, Robotic Research</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Gary Monetti" src="/GCTC/uploads/2017/07/11/GaryMonetti.jpg"><h3>Gary Monetti</h3><p>Founder and Managing Directorr, Monetti Associates</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Matt Quinn" src="/GCTC/uploads/2017/07/11/mattquinn.jpg"><h3>Matt Quinn</h3><p>Sr. Advisor, Health Technology, Health Resources and Services Administration</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Hans Riemer" src="/GCTC/uploads/2017/07/11/HansRiemer230X230ProPic.png"><h3>Hans Riemer</h3><p>Council Vice President, Montgomery County, MD</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Kelly Wismer" src="/GCTC/uploads/2017/07/11/kellywismer.jpg"><h3>Kelly Wismer</h3><p>Public Relations Manager, NTCA-The Rural Broadband Association</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Timothy Frank" src="/GCTC/uploads/2017/07/11/TimFrank_OneConcern.jpg"><h3>Timothy Frank</h3><p>Co-founder, One Concern, Inc</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Mike Dayton" src="/GCTC/uploads/2017/07/11/MichaelDaytonphoto.jpg"><h3>Mike Dayton</h3><p>Deputy Director, Department of Emergency Management, San Francisco, CA</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Mike Broeker" src="/GCTC/uploads/2017/07/11/BroekerMikePhoto.jpg"><h3>Mike Broeker</h3><p>President/COO, Epiphany Environmental</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Paul Herzig" src="/GCTC/uploads/2017/07/11/HerzigPaulPhoto.jpg"><h3>Paul Herzig</h3><p>Treasurer, Coudersport Area Municipal Authority</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Carol Politi" src="/GCTC/uploads/2017/07/11/carolpoliti.png"><h3>Carol Politi</h3><p>President &amp; CEO, TRX Systems, Inc.</p> </div>
+<div class="inlineBlock"><div class="pic"></div><img alt="Carla Bailo" src="/GCTC/uploads/2017/07/11/carla_bailoheadshot.jpg"><h3>Carla Bailo</h3><p>Assistant Vice President for Mobility Research and Business Development, The Ohio State</p> </div>
+
 
 	<!--
     <div class="inlineBlock"><div class="pic"></div>
