add blueprints buttons

--- a/super-clusters/index.html
+++ b/super-clusters/index.html
@@ -56,7 +56,9 @@
   <meta property="og:url" content="/GCTC/super-clusters//" />
   <meta property="og:image" content="img/logo.png" />
   
-  
+<style type="text/css">
+.col-md-6 button {margin-top:5px;}
+</style>  
 
 </head>
 
