add booth list buttons

--- a/event/gctc-expo-2017/exhibit/index.html
+++ b/event/gctc-expo-2017/exhibit/index.html
@@ -401,7 +401,8 @@
 
 						
 						<div style="float:right;display:inline;">
-							<button><a href="/GCTC/uploads/Exhibitor-Floor-Plan-V3.pdf" style="font-weight: bold;text-transform: uppercase;font-size: 20px;">Exhibit Floor Map</a></button>
+							<button><a href="/GCTC/uploads/Exhibitor-Floor-Plan-V3.pdf" target="_blank" style="font-weight: bold;text-transform: uppercase;font-size: 20px;">Exhibit Floor Map</a></button>
+							 &nbsp; <button><a href="/GCTC/uploads/Exhibitor-Booth-List.pdf" target="_blank" style="font-weight: bold;text-transform: uppercase;font-size: 20px;">Exhibit Booth List</a></button>
 						</div>
 						
 						<h2 id="sectorHead">All Sectors <span> </span></h2>
