--- a/index.html
+++ b/index.html
@@ -56,12 +56,17 @@
   <meta property="og:url" content="/GCTC//" />
   <meta property="og:image" content="img/logo.png" />
   
-  
+	<style type="text/css">
+		.bar {padding:0 0 60px 0;}
+		.introWrap p {    
+			line-height: 1.8;
+		}
+	</style>
 
 </head>
 
 
-  <body class="homepage">
+  <body>
 
     <div id="all">
 
@@ -511,8 +516,10 @@ ga('send', 'pageview');
 <script src="//cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0/jquery.counterup.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-parallax/1.1.3/jquery-parallax.js"></script>
 
+
 <script src="https://pages.nist.gov/GCTC/js/front.js"></script>
 
+<script src="/GCTC/js/owl.carousel.min.js"></script>
 
 
   </body>
