--- a/action-clusters-2018/index.html
+++ b/action-clusters-2018/index.html
@@ -313,7 +313,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>Action Clusters 2018 - TBD</h1>
+                <h1>Action Clusters 2018</h1>
             </div>
         </div>
     </div>
@@ -346,7 +346,7 @@
 						</div>
 						
 						<h2 id="sectorHead" style="display:inline;">All Sectors</h2>
-						
+						-->
 						<table id="searchable-table" cellpadding="5" cellspacing="0" border="0" width="100%"  class="cards">
 		<thead>
 			<tr>
@@ -462,6 +462,7 @@ Handlebars.registerHelper('wrapURL', function(str) {
     });
 }());
 
+/*
 $('#btnTransportation').on('click', function () {
         oTable.columns(1).search("Transportation" ).draw();
 		$("#sectorHead").html("Transportation");
@@ -486,11 +487,11 @@ $('#btnUrban').on('click', function () {
         oTable.columns(1).search("Other" ).draw();
 		$("#sectorHead").html("Other");
     }); 		
-	
+*/	
 
 </script>
 
--->
+
                     </div>
 
                 </div>
