--- a/event/gctc-kickoff-2018/press/index.html
+++ b/event/gctc-kickoff-2018/press/index.html
@@ -135,7 +135,7 @@
 				<ul id="expoNav" class="nav navbar-nav navbar-right" style="clear:both;">
                   <li class="dropdown">
                     
-                    <a href="/GCTC/event/gctc-kickoff-2018/">Expo Home</a>
+                    <a href="/GCTC/event/gctc-kickoff-2018/">Event Home</a>
                     
                   </li>
                   <li class="dropdown">
