--- a/action-clusters/index.html
+++ b/action-clusters/index.html
@@ -273,7 +273,7 @@
                    <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Action Clusters <span class="caret"></span></a>                    
                     <ul class="dropdown-menu">                      
-                        <li><a href="/GCTC/action-clusters-2018/">2018</a></li><li><a href="/GCTC/action-clusters/">2017</a></li>                      
+                        <li><a href="/GCTC/action-clusters-2018/">2018</a></li><li><a href="/GCTC/action-clusters-2017/">2017</a></li>                      
                         <li><a href="/GCTC/action-clusters-2016/">2016</a></li>                      
                     </ul>                    
                   </li>
@@ -342,10 +342,6 @@
 							<button id="btnInfrasctructure">City Data Platform/Dashboard</button>
 							<button id="btnDataTech">Public Wi-Fi/Broadband</button>
 							<button id="btnUrban">Other</button>							
-						</div>
-						
-						<div style="float:right;display:inline;">
-							<button><a href="/GCTC/action-clusters-2016/">Click here to view 2016 Action Clusters</a></button>
 						</div>
 						
 						<h2 id="sectorHead" style="display:inline;">All Sectors <span> </span></h2>
