--- a/super-clusters/index.html
+++ b/super-clusters/index.html
@@ -256,7 +256,7 @@
 
 <h3 id="leadership-team-1">Leadership Team:</h3>
 
-<p>Kansas City MO, City of Bellevue WA, KC Digital Drive, ThinkBig Pargners, Cisco, XAQT</p>
+<p>Kansas City MO, City of Bellevue WA, KC Digital Drive, ThinkBig Partners, Cisco, XAQT</p>
 
 <hr>
 
@@ -315,19 +315,19 @@
 
 <h3 id="chair-2">Chair:</h3>
 
-<p><strong>Ed Davalos, Sales Leader, Motorola Solutions</strong></p>
+<p><strong>Kreg Christoff, Vice President, Motorola Solutions</strong></p>
 
-<p><img src="/GCTC/uploads/2017/04/19/Ed%20Davalos%20-%20Pic%201.1.gif" alt="" /></p>
+<p><img src="/GCTC/uploads/2017/04/19/Kreg_Christoff.jpg" alt="Kreg Christoff" /></p>
 
 <h3 id="leadership-team-3">Leadership Team:</h3>
 
-<p>City of Atlanta GA, Gwinnett County, GA, City of San Leandro CA, AT&amp;T, CH2M, ZipPower, Scalable Strategies</p>
+<p>City of Atlanta GA, Gwinnett County, GA, City of San Leandro CA, Motorola Solutions, CH2M, PilotCity, Scalable Strategies</p>
 <hr>
 
 
 <div class="row">
 	<div class="col-md-6">
-		<h2 style="margin-top:0;" id="public-wifi-supercluster-pwsc">Public WiFi SuperCluster (PWSC)</h2>
+		<h2 style="margin-top:0;" id="public-wifi-supercluster-pwsc">Wireless SuperCluster (WSC)</h2>
 	</div>
 	<div class="col-md-6">
 		<button><a href="/GCTC/uploads/blueprints/20170823-GCTC-PWSC-Public-WIFI-Blueprint-FINAL-v2.pdf" target="_blank">Download The Blueprint</a></button>
@@ -356,7 +356,34 @@
 
 <h3 id="leadership-team-4">Leadership Team:</h3>
 
-<p>San Mateo County CA, City of San Leandro CA, City of Schenectady NY, Joint Venture Silicon Valley, Ruckus Wireless, Sensity/Verizon, Smart Connections LLC, Oku Solutions LLC, National Telecommunications and Information Administration</p>
+<p>County of San Mateo CA, City of San Leandro CA, City of Schenectady NY, Joint Venture Silicon Valley, Ruckus Wireless, Oku Solutions LLC, Smart Connections LLC, Strategy of Things, National Telecommunications and Information Administration</p>
+
+
+<div class="row">
+	<div class="col-md-6">
+		<h2 style="margin-top:0;" id="data-governance-exchange">Data Governance and Exchange SuperCluster (DGSC)</h2>
+	</div>	
+</div>
+<p>Data governance and exchange is one of the primary challenges to the deployment of smart cities technologies today. The data governance challenge has two main components. Many cities have successfully implemented data management and open data solutions for public data. But, there is not yet developed a comprehensive strategy for handling all of the data from thousands of IoT sensors available now and envisioned for the future. Cities are interested in IoT technology as a way to improve operations and the delivery of services.  What is a standard, but flexible and customizable framework that will allow cities to use and exchange IoT data for public value while protecting public privacy and trust? GCTC’s Data governance and exchange SuperCluster aims to address the challenge of building a governance and exchange model for IoT data and a plan for governments to successfully customize and deploy it. The group will work to collect best practices and produce blueprints for data exchange and governance, as well as deployed proofs to share with other teams and stakeholders.</p>
+	
+	<h3>Co-chairs:</h3>
+	<p>To Be Elected by the Leadership Team</p>
+	<h3>Leadership Team:</h3>
+	<p>City of Kansas City MO, AT&amp;T, Aspenworks, Ltd, Center for Innovative Technology, City Innovate Foundation, Skayl, University of California-Davis</p>
+
+<hr>
+
+<div class="row">
+	<div class="col-md-6">
+		<h2 style="margin-top:0;" id="agriculture-and-rural">Agriculture and Rural SuperCluster (ARSC)</h2>
+	</div>	
+</div>
+<p>The goals of the SuperCluster will be to develop projects, best practices and a blueprint to assist farmers manage their farms and make their land and animals more productive and healthier while making it easier to meet federal and state reporting requirements. For rural communities, the SuperCluster will focus on projects and best practices for bridging the digital divide and closing the homework gap, improving healthcare and the ability to age in place and improving economic development and spurring innovation.</p>
+	
+	<h3>Co-chairs:</h3>
+	<p>To Be Elected by the Leadership Team</p>
+	<h3>Leadership Team:</h3>
+	<p>Texas Tech University, The Rural Broadband Association, Joint Venture Silicon Valley, Georgia Tech, National Telecommunications and Information Administration</p>
 
 <hr>
 <h3>Contact info for the SuperCluster chairs can be found <a href="https://docs.google.com/spreadsheets/d/1a697VZZElvLgYISq0ukHhLsK556HQPcdIt_IG6gTPfM/edit?usp=sharing">here</a>.</h3>
