update supercluster page

--- a/super-clusters/index.html
+++ b/super-clusters/index.html
@@ -215,7 +215,7 @@
 							</div>
 						</div>
 
-<p>This supercluster was formed and is managed by forward looking municipalities interested in preparing their infrastructure for new technologies that look set to provide better, more equitable services at lower cost. It explores the opportunities provided by first and last mile vehicles including shared, low speed and autonomous. It explores the opportunities for building vibrant communities around transfer points and mobility hubs and it addresses how these vehicles and hubs can play a role in the last mile delivery of packages and other freight. To support these opportunities the supercluster works with teams developing new and advanced transportation models and environmental sensors that allow both the prediction of probable outcomes and the measurement of actual outcomes of introducing these technologies. Finally the supercluster works with teams implementing a smart citySDK to ensure the portability and interchangeability of solutions and propose regulatory and policy changes that support the safe deployment of these technologies.</p>
+<p>This supercluster was formed and is managed by forward looking municipalities interested in preparing their infrastructure for new technologies that look set to provide better, more equitable services at lower cost. It explores the opportunities provided by first and last mile vehicles including shared, low speed and autonomous. It explores the opportunities for building vibrant communities around transfer points and mobility hubs and it addresses how these vehicles and hubs can play a role in the last mile delivery of packages and other freight. To support these opportunities the supercluster works with teams developing new and advanced transportation models and environmental sensors that allow both the prediction of probable outcomes and the measurement of actual outcomes of introducing these technologies. Finally, the supercluster works with teams implementing a smart citySDK to ensure the portability and interchangeability of solutions and propose regulatory and policy changes that support the safe deployment of these technologies.</p>
 
 
 
@@ -383,7 +383,7 @@
 	<h3>Co-chairs:</h3>
 	<p>To Be Elected by the Leadership Team</p>
 	<h3>Leadership Team:</h3>
-	<p>Texas Tech University, The Rural Broadband Association, Joint Venture Silicon Valley, Georgia Tech, National Telecommunications and Information Administration</p>
+	<p>Rural Development Council, State of PA Dept. of Agriculture, The Rural Broadband Association, Joint Venture Silicon Valley, Georgia Tech, Texas Tech University, University of California, Agriculture and Natural Resources, John Deere, NTIA</p>
 
 <hr>
 <h3>Contact info for the SuperCluster chairs can be found <a href="https://docs.google.com/spreadsheets/d/1a697VZZElvLgYISq0ukHhLsK556HQPcdIt_IG6gTPfM/edit?usp=sharing">here</a>.</h3>
