--- a/event/gctc-expo-2017/exhibit/index.html
+++ b/event/gctc-expo-2017/exhibit/index.html
@@ -7,7 +7,7 @@
   <meta name="googlebot" content="index,follow,snippet,archive">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>exhibits</title>
+  <title>Exhibits</title>
   
 
   <meta name="author" content="" />
