--- a/event/gctc-expo-2017/exhibit/index.html
+++ b/event/gctc-expo-2017/exhibit/index.html
@@ -369,7 +369,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>exhibits</h1>
+                <h1>Exhibits</h1>
             </div>
         </div>
     </div>
