--- a/event/gctc-expo-2017/logistics/index.html
+++ b/event/gctc-expo-2017/logistics/index.html
@@ -232,7 +232,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>logistics</h1>
+                <h1>Logistics</h1>
             </div>
         </div>
     </div>
