--- a/super-clusters/index.html
+++ b/super-clusters/index.html
@@ -72,6 +72,8 @@
 	margin:20px 0 40px 0;
 }
 #Superclusters > p{margin-bottom:40px;}
+button.placeholder {cursor:default;border:1px solid #ddd;}
+button.placeholder:hover {border-color:#ddd;outline:none;}
 </style>  
 
 </head>
@@ -221,7 +223,11 @@
 											<h2 style="margin-top:0;">{{Cluster-Title}}</h2>
 										</div>
 										<div class="col-md-4">
+											{{#if Blueprint}}
 											<button class="pull-right"><a href="{{Blueprint}}" target="_blank">Download The Blueprint</a></button>
+											{{else}}
+											<button class="pull-right placeholder">Blueprint Coming Soon</button>
+											{{/if}}
 										</div>
 									</div>
 									
