--- a/about/participation-guide/index.html
+++ b/about/participation-guide/index.html
@@ -181,7 +181,7 @@
 								<article>
 									<h2>{{enhance Header}}</h2>
 									<h3>{{enhance Subheading}}</h3>
-									<p>{{{enhance Body}}}</p>
+									<p>{{{Body}}}</p>
 									
 									<p><img src="images/{{Image}}"></p>
 									<div>{{enhance Footer}}</div>
