--- a/about/partners/index.html
+++ b/about/partners/index.html
@@ -38,8 +38,7 @@
 <script src="../../js/underscore.js"></script>  
   
 <style type="text/css">
-    .inlineBlock {display:inline-block;vertical-align: top;margin:10px;padding:10px; border:1px solid #eee;width: 190px;height: 200px;
-    overflow: hidden;}
+    .inlineBlock {display:inline-block;vertical-align: top;max-width: 220px;}
 </style>
 </head>
 
