--- a/about/partners/index.html
+++ b/about/partners/index.html
@@ -191,7 +191,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<h3 id="us-federal-government-partners">Non-Governmental Partners</h3>
+						<h3 id="us-federal-government-partners">Non-Governmental Organization (NGO) Partners</h3>
 						<div id="NGPartners" class="handlebars"></div>						
 								<script id="cat-template2" type="text/x-handlebars-template">
 									
